--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ background-size: cover;
 
 
 .section-testimonials{
-  background: url(https://media.giphy.com/media/46hpy8xB3MiHfruixn/giphy.gif);
+ /* background: url(https://media.giphy.com/media/46hpy8xB3MiHfruixn/giphy.gif);*/
   background-position: center;
   background-size: cover;
 
