--- a/css/main.css
+++ b/css/main.css
@@ -105,5 +105,7 @@ background-size: cover;
  /* background: url(https://media.giphy.com/media/46hpy8xB3MiHfruixn/giphy.gif);*/
   background-position: center;
   background-size: cover;
+  margin-bottom: 80px;
+  margin-top: 80px;
 
 }
