--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,9 @@
 }
 
 .main-header {
-  background: url(https://media.giphy.com/media/46hpy8xB3MiHfruixn/giphy.gif);
+  background-image: url(https://i.pinimg.com/originals/08/a7/ab/08a7ab130881d2fb60585dc37744e04b.jpg);
+
+  /*background: url(https://media.giphy.com/media/46hpy8xB3MiHfruixn/giphy.gif);*/
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -102,7 +104,7 @@ footer {
 }
 
 .main-header-inner {
-  background: url(https://media.giphy.com/media/46hpy8xB3MiHfruixn/giphy.gif);
+ /* background: url(https://media.giphy.com/media/46hpy8xB3MiHfruixn/giphy.gif);*/
   background-position: center;
   background-size: cover;
   height: 500px;
